# bdvr1

./: .gitignore  CGHSTC34_BDVR_Formulation_Latest.md  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
data/derived/: arxiv_revised_analysis.json  btfr_residuals_sparc.csv  btfr_residuals_xgass.csv  proxy_ablation_results.csv  sparc_proxy_table.csv  xgass_proxy_table.csv
data/processed/: sparc_clean.csv  xgass_clean.csv
docs/: data_sources.md  hypothesis_summary.md  limitations.md  reproducibility_notes.md  resolved_hi_followup_plan.md
notebooks/: paper_checks.ipynb
outputs/tables/: inclination_restricted_summary.csv  measurement_quality_controls.csv  table1_sparc_sample_selection.csv  table2_xgass_proxy_ablation.csv
paper/: cghstc34_arxiv.tex
paper/tables/: mass_controls_summary.csv  measurement_quality_controls.csv  table1_sparc_sample_selection.csv  table2_xgass_proxy_ablation.csv  xgass_controls_summary.csv
runs/: cghstc_34_arxiv_revised_analysis.json
runs/cghstc_34_apj_governor_model/: m9_gate_diagnostics.csv  m9_governor_inputs.csv  m9_governor_predictions.csv  m9_summary.json
runs/cghstc_34_apj_governor_submission_candidate/: cghstc34_apj_governor_model.tex  cghstc34_apj_governor_model.txt  (+17 more)
scripts/: 00_check_environment.py  01_prepare_inputs.py  02_fit_btfr.py  03_compute_proxies.py  04_run_ablation.py  05_run_controls.py  06_make_figures.py  07_make_tables.py  08_validate_paper_numbers.py
tests/: test_btfr.py  test_proxies.py  test_reproducibility.py  test_statistics.py
(+707 files in other folders)
